# arca

./: .coderabbit.yaml  .gitignore  .semgrep.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  deny.toml  package.json  pnpm-lock.yaml
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  codeql.yml  osv-scanner.yml  scorecard.yml  security-audit.yml  semgrep.yml  trufflehog.yml
apps/desktop/: AGENTS.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
apps/desktop/src/lib/: audit.test.ts  audit.ts  clipboard.ts  ipc.ts  session.ts  shortcuts.ts
apps/desktop/src/lib/components/: UnlockScreen.svelte  VaultShell.svelte
apps/desktop/src/lib/components/audit/: AuditPanel.svelte  index.ts
apps/desktop/src/lib/components/brand/: Lettermark.svelte  Lockup.svelte  index.ts
apps/desktop/src/lib/components/chrome/: StatusBar.svelte  Tabs.svelte  WindowChrome.svelte  index.ts
apps/desktop/src/lib/components/detail/: EntryDetail.svelte  EntryForm.svelte  FieldStack.svelte  MetricStrip.svelte  NotePanel.svelte  index.ts
apps/desktop/src/lib/stores/: audit.svelte.ts  settings.svelte.test.ts  settings.svelte.ts  ui.svelte.ts  vault.svelte.ts
(+21 files in other folders)
