[package]
name = "arca-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "arca_desktop"
path = "src/lib.rs"

[[bin]]
name = "arca-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
vault-core = { path = "../../../packages/vault-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zeroize = "1"
